[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Start.gd" type="Script" id=1]
[ext_resource path="res://addons/menu-system/Options.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/lab/GunLab.tscn" type="PackedScene" id=3]
[ext_resource path="res://theme/theme.tres" type="Theme" id=4]

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
game_scene = ExtResource( 3 )

[node name="Start" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Start"]
margin_left = 293.0
margin_top = 150.0
margin_right = 347.0
margin_bottom = 209.0
alignment = 1

[node name="New" type="Button" parent="Start/VBoxContainer"]
margin_left = 5.0
margin_right = 49.0
margin_bottom = 17.0
size_flags_horizontal = 4
text = "Start"

[node name="Load" type="Button" parent="Start/VBoxContainer"]
visible = false
margin_top = 24.0
margin_right = 84.0
margin_bottom = 44.0
size_flags_horizontal = 4
text = "Load Game"

[node name="Options" type="Button" parent="Start/VBoxContainer"]
margin_top = 21.0
margin_right = 54.0
margin_bottom = 38.0
size_flags_horizontal = 4
text = "Options"

[node name="Exit" type="Button" parent="Start/VBoxContainer"]
margin_left = 11.0
margin_top = 42.0
margin_right = 43.0
margin_bottom = 59.0
size_flags_horizontal = 4
text = "Exit"

[node name="Options" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="Start/VBoxContainer/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="Start/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Start/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
